Changed "GUEST" -> "AWAY"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <button onclick="homeAdd3()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAy</h3>
                 <div id="guest-score" class="score"></div>
                 <button onclick="guestAdd1()">+1</button>
                 <button onclick="guestAdd2()">+2</button>
